examples/datalog/14_aggregations/07_top_k.dl.out

Executing script: /Users/samuel.picek/InputLayer/FlowLog/course/final-project/examples/datalog/14_aggregations/07_top_k.dl

> .db create test_top_k
Database 'test_top_k' created.
Switched to database: test_top_k
> .db use test_top_k
Switched to database: test_top_k
> +score[(1, 100), (2, 250), (3, 175), (4, 300), (5, 125), (6, 200)].
Inserted 6 facts into 'score'.
> view top_players(Player: int, top_k<3: int, Points: int, desc>: int) :- score(Player, Points).
Script error: Line 12: Parse error: Invalid column name: 'top_k<3'

